2006-09-07  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/MemoryImageSource.java: Added API docs.

2006-09-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicScrollBarUI.java
	(installDefaults): Call configureScrollBarColors().

2006-09-06  Francis Kung  <fkung@redhat.com>

	* java/awt/image/RescaleOp.java: Updated documentation and formatting.
	(constructor): Make copy of arrays.
	(createCompatibleDestImage): Changed treatment of null ColorModel.
	(filter(BufferedImage, BufferedImage)): Re-implemented.
	(filter(Raster, WritableRaster, boolean[])): New method.
	(filter(Raster, WritableRaster)): Re-implemented.
	(getOffsets): Prevent ArrayIndexOutOfBoundsException.
	(getPoint2D): Cleaned up formatting.
	(getScaleFactors): Prevent ArrayIndexOutOfBoundsException.

2006-09-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/UIManager.java
	(getBoolean(Object)): Reimplemented,
	(getBoolean(Object, Locale)): Likewise,
	(getBorder(Object)): Likewise,
	(getBorder(Object, Locale)): Likewise,
	(getColor(Object)): Likewise,
	(getColor(Object, Locale)): Likewise,
	(getDimension(Object)): Likewise,
	(getDimension(Object, Locale)): Likewise,
	(getFont(Object)): Likewise,
	(getFont(Object, Locale)): Likewise,
	(getIcon(Object)): Likewise,
	(getIcon(Object, Locale)): Likewise,
	(getInsets(Object)): Updated API docs,
	(getInsets(Object, Locale)): Likewise,
	(getInt(Object)): Reimplemented,
	(getInt(Object, Locale)): Likewise,
	(getString(Object)): Likewise,
	(getString(Object, Locale)): Likewise.

2006-09-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/UIManager.java
	(MultiplexUIDefaults.MultiplexUIDefaults()): Don't allow null fallback,
	(getDefaults): Initialise MultiplexUIDefaults with empty fallback.

2006-09-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Corrected various font defaults.
